# iterativennsimple

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  README_developer.md  README_sparse.md  prompts.txt  pyproject.toml
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
data/: .gitignore
data/processed/: README.md
data/raw/: EM_X_test.pt  EM_X_train.pt  EM_Y_test.pt  EM_Y_train.pt  lander_all_data.parquet  mass_spec.parquet
iterativennsimple/: MaskedLinear.py  Sequential1D.py  Sequential2D.py  SparseLinear.py  bmatrix.py
iterativennsimple/utils/: StartTargetData.py  df_to_tensor.py  load_data.py  plot_2D_start_end.py  save_data.py
notebooks/: 1-rcp-generate-data.ipynb  1-rcp-generate-data.py  1-rcp-visualize-data.ipynb  2-rcp-seqential-2D-problems.ipynb  2-rcp-seqential-simple-problems.ipynb  2a-rcp-iterated-model-train-circle.ipynb  2a-rcp-seqential-2D-problems.ipynb  3-rcp-iterated-2D-problems.ipynb  3-rcp-iterated-simple-problems.ipynb  4-rcp-MLP.ipynb  4-rcp-pulled-apart.ipynb  5-rcp-MLP.ipynb  5-rcp-Sequential-vs-Sequential2D.ipynb  5-rcp-pulled-apart.ipynb  6-rcp-Sequential-vs-Sequential2D.ipynb  6-rcp-computational-performance.ipynb
notebooks/advanced/: 1-rcp-iterated-model-train-MNIST.ipynb  1-rcp-simple-maps.ipynb  2-rcp-iterated-model-fish.ipynb  2-rcp-iterated-model-train-MNIST.ipynb  2b-rcp-iterated-model-train-MNIST.ipynb  3-rcp-computational-performance.ipynb  3-rcp-iterated-model-fish.ipynb  4-rcp-Sequential-vs-Sequential2D-performance.ipynb  4-rcp-sparse-computational-performance.ipynb  5-rcp-sparse-computational-performance.ipynb  6-rcp-Sequential2D-training-spectra.ipynb  prompts.txt
notebooks/advanced/sparse_scripts/: 1-rcp-gpu-dense-large-as-possible.py  2-rcp-gpu-csr-large-as-possible.py  3-rcp-gpu-monarch-large-as-possible.py  README.md
notebooks/not_fixed/: 2a-rcp-iterated-model-train-circle.ipynb  2b-rcp-iterated-model-train-MNIST.ipynb  2c-rcp-iterated-model-train-LunarLander.ipynb  2d-rcp-iterated-model-train-EMLocalization.ipynb  3-rcp-iterated-model-fish.ipynb
notebooks/presentations/: dynamical_systems.ipynb
scripts/: generate_data.py  install-torch-sparse.sh  post-create.sh  sparse_test.py  wandb_run.py  wandb_run.sweep.yml
scripts/turing/: README.md
scripts/turing/jupyter_notebooks/: .gitignore  README.md  Sequential-vs-Sequential2D.ipynb  Sequential-vs-Sequential2D.sh  clean.sh  jupyter_interactive_sbatch.sh  pytorch_lightning_cifar10.ipynb  pytorch_lightning_cifar10_sbatch.sh  slurm-1529581.out  tmp_output.ipynb
scripts/turing/python/: README.md  plot_digits_classification_exercise_sbatch.sh  pytorch_using_GPU.py  pytorch_using_GPU_sbatch.sh
scripts/turing/scripts/: README.md  interactive_login.sh  list_nodes.sh
scripts/wandb/: .gitignore  README.md  plot_demo.py  run_demo.py  run_sweep.yml
tests/: MNIST_small_start.parquet  MNIST_small_target.parquet  sparse_test.py  test_1-rcp-generate-data.ipynb  test_1-rcp-visualize-data.ipynb  test_2-rcp-seqential-2D-problems.ipynb  test_3-rcp-iterated-2D-problems.ipynb  test_4-rcp-MLP.ipynb  test_4-rcp-pulled-apart.ipynb  test_6-rcp-Sequential-vs-Sequential2D.ipynb  test_MaskedLinear.py  test_Sequential2D.py  test_SparseFromNeil.py  test_SparseLinear.py  test_load_data.py
