[tool.poetry]
name = "iterativennsimple"
version = "0.1.0"
description = "A simple version of iterativenn to get people started"
authors = ["Randy Paffenroth <rcpaffenroth@wpi.edu>"]
license = "BSD 3-Clause License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
# For the computational code
torch = {version = "^2.1.0+cpu", source = "pytorch"}
torchvision = {version = "^0.16.0+cpu", source = "pytorch"}
numpy = "1.25.*"
# For the notebooks and vscode
matplotlib = "3.8.*"
ipykernel = "6.26.*"
ipympl = "0.9.*"
jupyterlab = "4.0.*"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "7.4.*"
pylint = "3.0.*"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
