[tool.poetry]
name = "iterativennsimple"
version = "0.1.0"
description = "A simple version of iterativenn to get people started"
authors = ["Randy Paffenroth <rcpaffenroth@wpi.edu>"]
license = "BSD 3-Clause License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
# For the computational code
torch = {version = "2.5.1", source = "pytorch"}
torchvision = {version = "0.20.*", source = "pytorch"}
numpy = "2.1.*"
# For data
pandas = "2.2.*"
pyarrow = "18.1.*"
# For the notebooks and vscode
matplotlib = "3.9.*"
plotly = "5.24.*"
ipykernel = "6.29.*"
ipympl = "0.9.*"
jupyterlab = "4.3.*"
# wandb.ai
wandb = "0.19.*"
# Command line parsing
click = "8.1.*"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "7.4.*"
pylint = "3.0.*"
nbmake = "1.5.*"
jupytext = "1.16.*"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--nbmake"
testpaths = [
    "tests",
]

[tool.poetry.group.sparse]
optional = true

[tool.poetry.group.sparse.dependencies]
torch-scatter = {version = "*", source="torch-sparse"}
torch-sparse = {version = "*", source="torch-sparse"}

[[tool.poetry.source]]
name = "torch-sparse"
url = "https://data.pyg.org/whl/torch-2.5.1+cu121.html"
priority = "explicit"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
